--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
 
 @layer components {
   .btn {
-    @apply px-11 py-4 max-xl:py-2 max-xl:px-6 font-bold text-sm 2xl:text-lg min-w-fit;
+    @apply px-11 py-4 max-2xl:py-2 max-2xl:px-6 font-bold text-sm 2xl:text-lg min-w-fit;
   }
 
   .btn-primary {
